<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >


    <TextView
        android:id="@+id/idMainactivity_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center_horizontal"
        android:text="@string/mainActivity_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#503881"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/login_LLparent"
        android:layout_width="360dp"
        android:layout_height="269dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_box_shape"
        android:orientation="vertical"
        android:padding="10dp"
        app:circularflow_radiusInDP="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMainactivity_head"
        app:layout_constraintVertical_bias="0.67">

        <LinearLayout
            android:id="@+id/id_loginLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText"
                android:textAllCaps="false"
                android:textColor="#2E2B30"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_loginDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_description"
                android:textColor="#2E2B30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id_mobileTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:minHeight="48dp"
                        android:text="1234567890"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/id_loginPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Mobile Number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:minHeight="48dp"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/id_resetLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:onClick="resetLogin"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:text="@string/resetLogin"
                        android:textAllCaps="false"
                        android:textColor="#C31515"
                        android:visibility="gone" />
                </LinearLayout>

                <EditText
                    android:id="@+id/id_otpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/otp_hint"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:minHeight="48dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/id_loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@null"
                    android:fontFamily="monospace"
                    android:onClick="showOtpInputEditText"
                    android:text="@string/login_buttonDescription"
                    android:textColor="#C3020000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:cornerRadius="5dp" />

                <Button
                    android:id="@+id/id_OTPloginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape"
                    android:fontFamily="monospace"
                    android:onClick="gotoHomepage"
                    android:text="@string/otpVerify"
                    android:textColor="#C3020000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>